Fix the video overflow

--- a/app/css/overlay.css
+++ b/app/css/overlay.css
@@ -30,7 +30,7 @@ html, body {
     color: white;
     font-size:40px;
 }
-.mask header .close {
+.mask .header .close {
     background-color: white;
     position: absolute;
     right: 0px;
@@ -47,7 +47,10 @@ html, body {
     position: relative;
 }
 .mask .overlay .video {
-    width:100%;
+  max-width:100%;
+  max-height: 100%;
+  margin: 0 auto;
+  display: block;
 }
 
 .custom-dialog-mask {
